# KCast-improved

./: CMakeLists.txt
package/: metadata.json
package/contents/ui/: FullRepresentation.qml
package/plugin/: kcastinterface.cpp  kcastinterface.h
